--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fortawesome/free-solid-svg-icons": "7.0.1"
+    "@fortawesome/free-solid-svg-icons": "7.0.1",
+    "@fortawesome/free-brands-svg-icons": "7.0.1"
   },
   "devDependencies": {
     "vite": "^4.0.0",
