--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/free-solid-svg-icons": "7.0.1",
-    "@fortawesome/free-brands-svg-icons": "7.0.1"
+    "@fortawesome/free-brands-svg-icons": "7.0.1",
+    "framer-motion": "12.23.16"
   },
   "devDependencies": {
     "vite": "^4.0.0",
