--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,1 @@
-{
-  "name": "PixMod",
-  "short_name": "PixMod",
-  "start_url": "https://pix-mod.vercel.app",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "description": "Resize your images simply, easily, and smoothly — without complications",
-  "lang": "en",
-  "dir": "ltr",
-  "orientation": "any",
-  "scope": "/",
-  "icons": [
-    {
-      "src": "https://i.postimg.cc/pLgghPqS/Pix-Mod-Logo-1024x1024.png",
-      "sizes": "1024x1024",
-      "type": "image/png"
-    },
-    {
-      "src": "https://i.postimg.cc/pLgghPqS/Pix-Mod-Logo-1024x1024.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "https://i.postimg.cc/pLgghPqS/Pix-Mod-Logo-1024x1024.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
-  "prefer_related_applications": false,
-  "related_applications": []
-}
+{"name":"","M7D-PLATFORMS":"","icons":[{"favicon":"/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"favicon":"/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],"theme_color":"#ffffff","background_color":"#ffffff","display":"standalone"}
