--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,27 @@
 {
-  "name": "PixMod",
-  "short_name": "PixMod",
-  "start_url": "https://pix-mod.vercel.app",
+  "name": "M7D-PLATFORMS",
+  "short_name": "M7D-PLATFORMS",
+  "start_url": "https://m7d-platforms.vercel.app",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "description": "Resize your images simply, easily, and smoothly — without complications",
+  "description": "tanjiro paltforms",
   "lang": "en",
   "dir": "ltr",
   "orientation": "any",
   "scope": "/",
   "icons": [
     {
-      "src": "https://i.postimg.cc/pLgghPqS/Pix-Mod-Logo-1024x1024.png",
+      "src": "",
       "sizes": "1024x1024",
       "type": "image/png"
     },
-    {
-      "src": "https://i.postimg.cc/pLgghPqS/Pix-Mod-Logo-1024x1024.png",
+      "src": "",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "https://i.postimg.cc/pLgghPqS/Pix-Mod-Logo-1024x1024.png",
+      "src": "",
       "sizes": "192x192",
       "type": "image/png"
     }
